tests/snapshots/per_slot_snapshots__grep_per_slot_line_cap.snap
---
source: tests/per_slot_snapshots.rs
assertion_line: 27
expression: normalize(&out)
---
==> tests/fixtures/code/sample.py <==
12:     return total


==> tests/fixtures/code/sample.ts <==
14:   return total;
