tests/snapshots/per_slot_snapshots__multibyte_chars_and_bytes_per_slot.snap
---
source: tests/per_slot_snapshots.rs
assertion_line: 85
expression: normalize(&out)
---
==> tests/fixtures/bytes_chars/long.txt <==
…


==> 1 more files <==
