tests/snapshots/per_slot_snapshots__multibyte_chars_tighter_than_bytes.snap
---
source: tests/per_slot_snapshots.rs
expression: normalize(&out)
---
.
└─ tests/fixtures/chars_vs_bytes/
│ ├─ emoji.txt
│ │ 😀😀😀😀😀
│ ├─ ascii.txt
│ │ …
