tests/snapshots/per_slot_snapshots__tree_per_slot_line_cap.snap
---
source: tests/per_slot_snapshots.rs
assertion_line: 65
expression: normalize(&out)
---
.
└─ tests/fixtures/tree_per_slot/
│ ├─ a.txt
│ │ a1
│ │ …
│ ├─ b.txt
│ │ b1
│ │ …
