tests/snapshots/per_slot_snapshots__tree_per_slot_under_cap.snap
---
source: tests/per_slot_snapshots.rs
assertion_line: 79
expression: normalize(out)
---
.
└─ tests/fixtures/tree_per_slot/
│ ├─ a.txt
│ │ a1
│ │ a2
│ ├─ b.txt
│ │ b1
│ │ b2
