tests/snapshots/per_slot_snapshots__tree_per_slot_varied_line_cap.snap
---
source: tests/per_slot_snapshots.rs
expression: normalize(&out)
---
.
└─ tests/fixtures/tree_per_slot_varied/
│ ├─ d.txt
│ │ d1
│ │ d2
│ ├─ c.txt
│ │ c1
│ │ c2
│ │ …
│ ├─ b.txt
│ │ b1
│ │ b2
│ │ …
│ ├─ a.txt
│ │ a1
│ │ a3
│ │ …
